Update desktop responsiveness 1

--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APE Festival Webpage</title>
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./js/artists.js"></script>
+    <script src="https://kit.fontawesome.com/76eab5b41f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <header>
+        <div id="header-1"></div>
+        <div id="header-2"></div>
+    </header>
     <main>
-        <div id="header-text">
-            <h1 class="title bg">ALL POINTS<br />
+        <div id="header-wrapper">
+            <img id="stage" src="./images/stage.jpg" alt="Stage photo" />
+            <h1 id="title">ALL POINTS<br />
                 EAST FEST<br />
                 2023</h1>
-        </div>
-        <p id="event-desc">
-            All Points East is an annual music festival held over two weekends in
-            London's Victoria Park, run by AEG Presents. The 10-day event comprises
-            one festival weekend, four days of free entry and community activities
-            known as "In the Neighbourhood" and finally three standalone headline
-            shows in their APE Presents series. 
-        </p>
-        <div id="date-address">
-            <p id="date">2023.08.18(FRI) ~ 28(MON)</p>
-            <address>@ Victoria Park, London</address>
+            <p id="event-desc">
+                All Points East is an annual music festival held over two weekends in
+                London's Victoria Park, run by AEG Presents. The 10-day event comprises
+                one festival weekend, four days of free entry and community activities
+                known as "In the Neighbourhood" and finally three standalone headline
+                shows in their APE Presents series.
+            </p>
+            <div id="date-address">
+                <p id="date">2023.08.18(FRI) ~ 28(MON)</p>
+                <address>@ Victoria Park, London</address>
+            </div>
         </div>
         <section id="program-activities">
             <div id="activities-header">
@@ -83,5 +91,10 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div id="footer-1"></div>
+        <div id="footer-2"></div>
+    </footer>
 </body>
+
 </html>
