Add about page and footer

--- a/index.html
+++ b/index.html
@@ -26,26 +26,27 @@
         <div id="header-2">
             <aside id="popup">
                 <ul id="popup-list">
-                    <li><a>About</a></li>
-                    <li><a>Program</a></li>
-                    <li><a>Join</a></li>
-                    <li><a>Sponsor</a></li>
-                    <li><a>News</a></li>
-                    <li><a>Home</a></li>
+                    <li>About</li>
+                    <li>Program</li>
+                    <li>Join</li>
+                    <li>Sponsor</li>
+                    <li>News</li>
+                    <li>Home</li>
                 </ul>
             </aside>
             <i class="fa-solid fa-bars" id="bars-button"></i>
             <img src="./images/logo.jpg" id="header-img" />
             <ul id='desktop-menu'>
-                <li><a>About</a></li>
-                <li><a>Program</a></li>
-                <li><a>Join</a></li>
-                <li><a>Sponsor</a></li>
-                <li><a>News</a></li>
-                <li><a>Home</a></li>
+                <li>About</li>
+                <li>Program</li>
+                <li>Join</li>
+                <li>Sponsor</li>
+                <li>News</li>
+                <li>Home</li>
             </ul>
         </div>
     </header>
+
     <main>
         <div id="header-wrapper">
             <img id="stage" src="./images/stage.jpg" alt="Stage photo" />
@@ -122,23 +123,60 @@
             </div>
         </section>
     </main>
+
     <section id="about" class="unactive">
         <div id="about-header">
-            <h2 id="about-title"></h2>
+            <h2 id="about-title">All Points East <br />Fest 2023</h2>
             <hr />
-            <p id="about-text"></p>
+            <p id="about-text">
+                The first year of All Points East was held in 2018 with LCD Soundsystem,
+                The xx and Björk headlining the festival weekend and Catfish and the Bottlemen,
+                The National and Nick Cave headlining the three standalone shows the following weekend.
+            </p>
             <p id="about-contact">
-                <a></a>
+                Please contact us per Email for nay further questions about
+                All Points East 2023!<br />
+                <address>allpointseast2023@gmail.com</address>
             </p>
         </div>
-    </section>
-    <footer>
-        <div id="footer-1"></div>
-        <div id="footer-2"></div>
-    </footer>
-    <section id="secondary-footer" class="unactive">
 
+        <div id="see-past">
+            <h2>See the past All Points East Festivals</h2>
+            <hr />
+            <p>Take a look at the past two All Points East Festivals</p>
+            <div id="past-ctr">
+                <div class="past-event-card">
+                    <div class="overlay"></div>
+                    <h3>2019</h3>
+                </div>
+                <div class="past-event-card">
+                    <div class="overlay"></div>
+                    <h3>2021</h3>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <footer>
+        <div id="partners-ctr">
+            <h2>Partners</h2>
+            <hr />
+            <div id="partners">
+                <img src="./images/partners/mozilla.svg" />
+                <img src="./images/partners/googlekorea.svg" />
+                <img src="./images/partners/naver.svg" />
+                <img src="./images/partners/daumkakaologo.svg" />
+                <img src="./images/partners/airbnb.svg" />
+            </div>
+        </div>
+        <div id="inner-footer">
+            <img src="./images/logo.jpg" />
+            <small>
+                2023 All East Points.<br/>
+                Some rights reserved.
+            </small>
+        </div>
+    </footer>
 </body>
 
 </html>
