--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./js/artists.js"></script>
     <script defer src="./js/popup.js"></script>
-    <script defer src="./js/navigation.js"></script>
+    <!-- <script defer src="./js/navigation.js"></script> -->
     <script src="https://kit.fontawesome.com/76eab5b41f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -26,23 +26,23 @@
         <div id="header-2">
             <aside id="popup">
                 <ul id="popup-list">
-                    <li>About</li>
+                    <li><a href="./about.html">About</a></li>
                     <li>Program</li>
                     <li>Join</li>
                     <li>Sponsor</li>
                     <li>News</li>
-                    <li>Home</li>
+                    <li><a href="./index.html">Home</a></li>
                 </ul>
             </aside>
             <i class="fa-solid fa-bars" id="bars-button"></i>
             <img src="./images/logo.jpg" id="header-img" />
             <ul id='desktop-menu'>
-                <li>About</li>
+                <li><a href="./about.html">About</a></li>
                 <li>Program</li>
                 <li>Join</li>
                 <li>Sponsor</li>
                 <li>News</li>
-                <li>Home</li>
+                <li><a href="./index.html">Home</a></li>
             </ul>
         </div>
     </header>
@@ -50,9 +50,12 @@
     <main>
         <div id="header-wrapper">
             <img id="stage" src="./images/stage.jpg" alt="Stage photo" />
-            <h1 id="title">ALL POINTS<br />
+            <h1 id="title">
+                <small>Hello!</small><br />
+                ALL POINTS<br />
                 EAST FEST<br />
-                2023</h1>
+                2023
+            </h1>
             <p id="event-desc">
                 All Points East is an annual music festival held over two weekends in
                 London's Victoria Park, run by AEG Presents. The 10-day event comprises
@@ -73,6 +76,7 @@
             <div id="activities-ctr">
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/rap.png" />
                         <p class="activity-name">Stormzy</p>
                     </div>
                     <p class="activity-text">KEHLANI | SAMPHA | KNUCKS | LUCKY DAYE + MORE
@@ -80,6 +84,7 @@
                 </div>
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/rock.png" />
                         <p class="activity-name">Field Day</p>
                     </div>
                     <p class="activity-text">APHEX TWIN | BONOBO | ARCA | FEVER RAY | JAYDA G + MORE
@@ -87,6 +92,7 @@
                 </div>
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/rock.png" />
                         <p class="activity-name">The Strokes</p>
                     </div>
                     <p class="activity-text">YEAH YEAH YEAHS + MORE
@@ -94,6 +100,7 @@
                 </div>
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/dj.png" />
                         <p class="activity-name">Jungle</p>
                     </div>
                     <p class="activity-text">ERYKAH BADU | RAYE | GRABRIELS | NIA ARCHIVES + MORE
@@ -101,6 +108,7 @@
                 </div>
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/singer.png" />
                         <p class="activity-name">Dermot Kennedy</p>
                     </div>
                     <p class="activity-text">OLIVIA DEAN | SG LEWIS | AURORA + MORE
@@ -108,13 +116,14 @@
                 </div>
                 <div class="program-card">
                     <div class="half-area-ctr">
+                        <img src="./icons/music_genres/rock.png" />
                         <p class="activity-name">Haim</p>
                     </div>
                     <p class="activity-text">GIRL IN RED | FKJ CONFIDENCE MAN | LIZZY MCALPINE | TOVE LO + MORE
                     </p>
                 </div>
             </div>
-            <button id="join-btn">Buy Tickets</button>
+            <button id="join-btn">BUY TICKETS</button>
         </section>
         <section id="artists">
             <div id="artists-header">
@@ -124,40 +133,7 @@
         </section>
     </main>
 
-    <section id="about" class="unactive">
-        <div id="about-header">
-            <h2 id="about-title">All Points East <br />Fest 2023</h2>
-            <hr />
-            <p id="about-text">
-                The first year of All Points East was held in 2018 with LCD Soundsystem,
-                The xx and Björk headlining the festival weekend and Catfish and the Bottlemen,
-                The National and Nick Cave headlining the three standalone shows the following weekend.
-            </p>
-            <p id="about-contact">
-                Please contact us per Email for nay further questions about
-                All Points East 2023!<br />
-                <address>allpointseast2023@gmail.com</address>
-            </p>
-        </div>
-
-        <div id="see-past">
-            <h2>See the past All Points East Festivals</h2>
-            <hr />
-            <p>Take a look at the past two All Points East Festivals</p>
-            <div id="past-ctr">
-                <div class="past-event-card">
-                    <div class="overlay"></div>
-                    <h3>2019</h3>
-                </div>
-                <div class="past-event-card">
-                    <div class="overlay"></div>
-                    <h3>2021</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
+    <footer id="home-footer">
         <div id="partners-ctr">
             <h2>Partners</h2>
             <hr />
